@@ -1,3 +1,7 @@
+2004-05-14  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b118
+
+	* Change: Better missing parent detection, minor text changes
+
 2004-05-14  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b117
 
 	* Fix: Actually enable attachOrphans(), since I'd forgotten to pass its
